--- a/src/locales/en/main.json
+++ b/src/locales/en/main.json
@@ -533,7 +533,6 @@
     "Horizontal": "Horizontal",
     "Vertical": "Vertical",
     "new": "new",
-    "newBadge": "New",
     "deprecated": "deprecated",
     "Extensions": "Extensions"
   },
@@ -2504,8 +2503,9 @@
   },
   "breadcrumbsMenu": {
     "duplicate": "Duplicate",
-    "switchModes": "Switch modes",
-    "editApp": "Edit App",
+    "enterAppMode": "Enter app mode",
+    "exitAppMode": "Exit app mode",
+    "workflowActions": "Workflow actions",
     "clearWorkflow": "Clear Workflow",
     "deleteWorkflow": "Delete Workflow",
     "deleteBlueprint": "Delete Blueprint",
