--- a/src/locales/en/main.json
+++ b/src/locales/en/main.json
@@ -3199,5 +3199,18 @@
     "poseToVideo": "Pose to video",
     "cannyToVideo": "Canny to video",
     "depthToVideo": "Depth to video"
+  },
+  "builderToolbar": {
+    "label": "App Builder",
+    "select": "Select",
+    "selectDescription": "Choose inputs/outputs",
+    "arrange": "Arrange",
+    "arrangeDescription": "Design your layout",
+    "save": "Save",
+    "saveDescription": "Preview and publish app",
+    "connectOutput": "Connect an output",
+    "connectOutputBody1": "Your app needs at least one output to be connected before it can be saved.",
+    "connectOutputBody2": "Switch to the 'Select' step and click on output nodes to add them here.",
+    "switchToSelect": "Switch to Select"
   }
 }
