--- a/src/locales/en/main.json
+++ b/src/locales/en/main.json
@@ -3204,8 +3204,8 @@
     "label": "App Builder",
     "select": "Select",
     "selectDescription": "Choose inputs/outputs",
-    "arrange": "Arrange",
-    "arrangeDescription": "Design your layout",
+    "arrange": "Preview",
+    "arrangeDescription": "Review app layout",
     "save": "Save",
     "saveDescription": "Preview and publish app",
     "connectOutput": "Connect an output",
