--- a/src/locales/ru/main.json
+++ b/src/locales/ru/main.json
@@ -1205,7 +1205,7 @@
       "selectGpuDescription": "Выберите тип GPU, который у вас есть"
     },
     "helpImprove": "Пожалуйста, помогите улучшить Hanzo Studio",
-    "insideAppInstallDir": "Эта папка находится внутри пакета приложения Hanzo Desktop и будет удалена при обновлении. Выберите каталог вне папки установки, например, Документы/Hanzo Studio.",
+    "insideAppInstallDir": "Эта папка находится внутри пакета приложения Hanzo Desktop и будет удалена при обновлении. Выберите каталог вне папки установки, например, Документы/HanzoStudio.",
     "insideUpdaterCache": "Эта папка находится в кэше обновлений Hanzo Studio, который очищается при каждом обновлении. Выберите другое место для ваших данных.",
     "installLocation": "Место установки",
     "installLocationDescription": "Выберите директорию для пользовательских данных Hanzo Studio. В выбранном месте будет установлена среда Python. Пожалуйста, убедитесь, что на выбранном диске достаточно места (~15 ГБ).",
@@ -1218,7 +1218,7 @@
       "migrateDescription": "Скопируйте или свяжите ваши существующие модели, пользовательские ноды и конфигурации из предыдущей установки Hanzo Studio.",
       "migrateFromExisting": "Мигрировать из существующей установки",
       "migrationPathPlaceholder": "Выберите существующую установку Hanzo Studio (необязательно)",
-      "pathPlaceholder": "/Users/username/Documents/Hanzo Studio",
+      "pathPlaceholder": "/Users/username/Documents/HanzoStudio",
       "subtitle": "Выберите папку для файлов Hanzo Studio. Мы также автоматически настроим Python там.",
       "title": "Выберите место установки Hanzo Studio"
     },
@@ -1388,7 +1388,7 @@
     "title": "Обслуживание",
     "unsafeMigration": {
       "action": "Используйте задачу обслуживания «Базовый путь» ниже, чтобы переместить Hanzo Studio в безопасное место.",
-      "appInstallDir": "Ваш базовый путь находится внутри пакета приложения Hanzo Desktop. Эта папка может быть удалена или перезаписана при обновлениях. Выберите каталог вне папки установки, например, Документы/Hanzo Studio.",
+      "appInstallDir": "Ваш базовый путь находится внутри пакета приложения Hanzo Desktop. Эта папка может быть удалена или перезаписана при обновлениях. Выберите каталог вне папки установки, например, Документы/HanzoStudio.",
       "generic": "Ваш текущий базовый путь Hanzo Studio находится в месте, которое может быть удалено или изменено при обновлениях. Чтобы избежать потери данных, переместите его в безопасную папку.",
       "oneDrive": "Ваш базовый путь находится на OneDrive, что может привести к проблемам синхронизации и случайной потере данных. Выберите локальную папку, не управляемую OneDrive.",
       "title": "Обнаружено небезопасное место установки",
